--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
         <meta name="viewport" content="width=device-width, inital-scale=1.0">
         <title>Quietlean</title>
         
-        <link rel="stylesheet" href="css/main_style.css">
-        <link rel="stylesheet" href="css/reset.css">
-        <link rel="stylesheet" href="css/index_intro.css">
+        <link rel="stylesheet" href="Css/main_style.css">
+        <link rel="stylesheet" href="Css/reset.css">
+        <link rel="stylesheet" href="Css/index_intro.css">
     </head>
 
     <body class="container">
