handy formatierung verbessert

--- a/index.html
+++ b/index.html
@@ -144,22 +144,25 @@
                             <p class="sofw_text">>Error</p>
                             <p class="sofw_text">>+</p>
                             <p class="sofw_text">>POST request failed</p>
-                            <p class="sofw_text">>Error</p>
-                            <p class="sofw_text">>Error</p>
-                            <p class="sofw_text">>Error</p>
-                            <p class="sofw_text">>Error</p>
-                            <p class="sofw_text">>Error</p>
-                            <p class="sofw_text">>Error</p>
-                            <p class="sofw_text">>Error</p>
-                            <p class="sofw_text">>Error</p>
-                            <p class="sofw_text">>Error</p>
-                            <p class="sofw_text">>Error</p>
-                            <p class="sofw_text">>Error</p>
-                            <p class="sofw_text">>Error</p>
-                            <p class="sofw_text">>Error</p>
-                            <p class="sofw_text">>Error</p>
-                            <p class="sofw_text">>Error</p>
-                            <p class="sofw_text">>Error</p>
+                            <div id="error_feld">
+                                <p class="sofw_text">>Error</p>
+                                <p class="sofw_text">>Error</p>
+                                <p class="sofw_text">>Error</p>
+                                <p class="sofw_text">>Error</p>
+                                <p class="sofw_text">>Error</p>
+                                <p class="sofw_text">>Error</p>
+                                <p class="sofw_text">>Error</p>
+                                <p class="sofw_text">>Error</p>
+                                <p class="sofw_text">>Error</p>
+                                <p class="sofw_text">>Error</p>
+                                <p class="sofw_text">>Error</p>
+                                <p class="sofw_text">>Error</p>
+                                <p class="sofw_text">>Error</p>
+                                <p class="sofw_text">>Error</p>
+                                <p class="sofw_text">>Error</p>
+                                <p class="sofw_text">>Error</p>
+                            </div>
+                            
                         </div>
 
                     </div>
