--- a/html/Y.KRUX.html
+++ b/html/Y.KRUX.html
@@ -31,11 +31,11 @@
                     I was feeling like at that time. This resultet into an 
                     assortment of all kinds of music. Since I started 
                     uploading my music right after i started geting into 
-                    musicproduction there are a lot of low quality songs. For 
-                    me this is more of an archive of my muscial development 
+                    musicproduction there are a lot of low quality songs on my Soundcloud. For 
+                    me this is somewhat of an archive of my muscial development 
                     rather than a super serious project. So I dont really 
                     care if my songs sound a lil crooked ^^. I'll might go 
-                    more professional in the future tough. So stay tuned.
+                    more professional in the future though. So stay tuned.
                 </p>
             </div>
             
