--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
                             <p class="paragraph_music">For multiple years now I have been
                                 producing music. Since I enjoy all kinds of music I never 
                                 focussed on one speciffic genre. I enjoy exploring sounds
-                                and composing sonic odditys. So far I my creative process
+                                and composing sonic odditys. So far my creative process
                                 has lead to an incoherent music archive.  
                             </p><br>
                             <a class="music_link" href="html/Y.KRUX.html">> explore</a>
