Erster Beitrag, Alles mögliche geändert

--- a/html/Absent.html
+++ b/html/Absent.html
@@ -11,8 +11,15 @@
     <body>
 
         <div class="nav_page">
-            <div class="back_home">
-                <a href="../index.html">Back Home</a>
+            <button class="menu-button" onclick="DropDown()">Menu</button>
+            <div id="menu-dropdown" class="back_home">
+                <a href="../index.html">› Back Home</a><br>
+                <a href="../html/Music.html">› Music</a><br>
+                <a href="../html/Software.html">› Software</a><br>
+                <a href="../html/Absent.html">› Absent</a><br>
+                <a href="../html/Me.html">› Who am I?</a><br>
+                <a href="../html/Contact.html">› Contact</a><br>
+
             </div>
         </div>
 
@@ -38,5 +45,6 @@
             </div>
             
         </main>
+        <script src="../java-script.js/DropDown"></script>
     </body>
 </html>
