--- a/html/Me.html
+++ b/html/Me.html
@@ -11,8 +11,15 @@
     <body>
 
         <div class="nav_page">
-            <div class="back_home">
-                <a href="../index.html">Back Home</a>
+            <button class="menu-button" onclick="DropDown()">Menu</button>
+            <div id="menu-dropdown" class="back_home">
+                <a href="../index.html">› Back Home</a><br>
+                <a href="../html/Music.html">› Music</a><br>
+                <a href="../html/Software.html">› Software</a><br>
+                <a href="../html/Absent.html">› Absent</a><br>
+                <a href="../html/Me.html">› Who am I?</a><br>
+                <a href="../html/Contact.html">› Contact</a><br>
+
             </div>
         </div>
 
@@ -23,15 +30,16 @@
         <main class="main_content_page">
             <div class="page_content_container">
 
-                <p class="page_text">I'm a Science student from Berlin
+                <!--<p class="page_text">I'm a Science student from Berlin
                     and my passion happend to be music.
                     Is this introductive page necessary?
-                </p>
+                </p>-->
 
                 <img class="pictures_page" src="../Pictures/pig.JPG">
                 
             </div>
             
         </main>
+        <script src="../java-script.js/DropDown"></script>
     </body>
 </html>
