--- a/html/Y.KRUX.html
+++ b/html/Y.KRUX.html
@@ -11,8 +11,15 @@
     <body>
 
         <div class="nav_page">
-            <div class="back_home">
-                <a href="../index.html">Back Home</a>
+            <button class="menu-button" onclick="DropDown()">Menu</button>
+            <div id="menu-dropdown" class="back_home">
+                <a href="../index.html">› Back Home</a><br>
+                <a href="../html/Music.html">› Music</a><br>
+                <a href="../html/Software.html">› Software</a><br>
+                <a href="../html/Absent.html">› Absent</a><br>
+                <a href="../html/Me.html">› Who am I?</a><br>
+                <a href="../html/Contact.html">› Contact</a><br>
+
             </div>
         </div>
 
@@ -28,7 +35,7 @@
                 <p class="page_text">You can find me on Soundcloud as 
                     <a target="_blank" rel="noopener noreferrer" href="https://soundcloud.com/ykrux">Y.KRUX</a>.
                     So far music has been my greatest hobby and I produced what
-                    I was feeling like at that time. This resultet into an 
+                    I was feeling like at the time. This resultet into an 
                     assortment of all kinds of music. Since I started 
                     uploading my music right after i started geting into 
                     musicproduction there are a lot of low quality songs on my Soundcloud. For 
@@ -42,5 +49,6 @@
             </div>
             
         </main>
+        <script src="../java-script.js/DropDown"></script>
     </body>
 </html>
