--- a/html/Blog-Posts/01.html
+++ b/html/Blog-Posts/01.html
@@ -38,7 +38,7 @@
                  Some songs feel like I'm taking a hot shower and others make me feel like I've
                  become a forest elf. <br><br>
                 
-                 So, I figured it'd be a good idea to through some of these songs into my first playlist. You could 
+                 So, I figured it'd be a good idea to throw some of these songs into my first playlist. You could 
                  argue that a good Playlist needs more contrast, but let's forget about that for today.<br><br>
 
                  Enjoy the music ｡◕‿◕｡ 
