--- a/html/Blog.html
+++ b/html/Blog.html
@@ -5,6 +5,10 @@
         <meta name="viewport" content="width=device-width, inital-scale=1.0">
         <title>Blog</title>
 
+        <meta property="og:title" content="Blog - Quietlean">
+        <meta property="og:description" content="You're now turning into Sexy Moon FM.">
+        <!--<meta property="og:image" content="">-->
+
         <link rel="stylesheet" href="../css/page_style.css">
     </head>
 
