--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, inital-scale=1.0">
         <title>Quietlean</title>
+
+        <link rel="icon" href="Pictures/favicon-1.1.png" type="image/x-icon">
         
         <link rel="stylesheet" href="css/main_style.css">
         <link rel="stylesheet" href="css/reset.css">
