01.html > doppelt this

--- a/html/Blog-Posts/01.html
+++ b/html/Blog-Posts/01.html
@@ -30,7 +30,7 @@
         <main class="main_content_page">
             <div class="page_content_container">
 
-               <p class="page_text">There is this this kind of electronic music, and I was wondering what it is that makes it feel
+               <p class="page_text">There is this kind of electronic music, and I was wondering what it is that makes it feel
                  like there is a common theme. I gave it some thought. At first, I thought it was just something emotional, but
                  that didnt feel quite right. How could I describe it? Everytime I listen to these songs, it feels
                  like something falls right into place. Feels a little bit like that image you have of an ideal human connection,
