--- a/html/Blog.html
+++ b/html/Blog.html
@@ -3,13 +3,15 @@
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, inital-scale=1.0">
-        <title>Blog</title>
+        <title>Quietlean - Blog</title>
 
         <meta property="og:title" content="Blog - Quietlean">
         <meta property="og:description" content="You're now turning into Sexy Moon FM.">
+        <link rel="icon" href="../Pictures/favicon-kreis1.png" type="image/x-icon">
         <!--<meta property="og:image" content="">-->
 
         <link rel="stylesheet" href="../css/page_style.css">
+        <link rel="stylesheet" href="../css/blog_style.css">
     </head>
 
     <body>
@@ -36,12 +38,41 @@
 
                 <p class="page_text">You finally made it to the glade, the vault, the abyss. Enjoy!
                 </p>
-                <!--<p>My first entry still has to be done ♡҉٩(*´︶`*)۶҉</p>-->
+                
 
                 <!--<img src="../Pictures/slowed-BIG-Web-Heart.gif" style="width: 30%; margin: 30px;">-->
 
+                <a href="Blog-Posts/02-kochen.html" class="link-fuer-box-blog">
+                    <div class="header_blog_container-main">
+                        <h3>Cookii1n!</h3>
+
+                        <div class="blog-entry-description">
+
+                            <table>
+                                <tr>
+                                    <td style="width: 120px;"># Topic</td>
+                                    <td>› chop chop action</td>
+                                </tr>
+                                <tr>
+                                    <td># Date</td>
+                                    <td>› 29.02.2025</td>
+                                </tr>
+                                <tr>
+                                    <td># Size</td>
+                                    <td>› M</td>
+                                </tr>
+                                <!--   <tr>
+                                    <td># Technical</td>
+                                    <td>› no</td>
+                                </tr> -->
+                            </table>
+
+                        </div>
+                    </div>
+                </a>
+
                 <a href="Blog-Posts/01.html" class="link-fuer-box-blog">
-                    <div class="header_blog_container">
+                    <div class="header_blog_container-main">
                         <h3>Uh Ya! Electronic!</h3>
 
                         <div class="blog-entry-description">
@@ -56,13 +87,13 @@
                                     <td>› 17.01.2025</td>
                                 </tr>
                                 <tr>
-                                    <td># Playlist</td>
-                                    <td>› yes</td>
+                                    <td># Size</td>
+                                    <td>› L</td>
                                 </tr>
-                                <tr>
+                                <!-- <tr>
                                     <td># Technical</td>
                                     <td>› no</td>
-                                </tr>
+                                </tr> -->
                             </table>
 
                             <!--Tabelle-->
