--- a/html/Software.html
+++ b/html/Software.html
@@ -5,6 +5,8 @@
         <meta name="viewport" content="width=device-width, inital-scale=1.0">
         <title>Software</title>
 
+        <link rel="icon" href="../Pictures/favicon-kreis1.png" type="image/x-icon">
+
         <link rel="stylesheet" href="../css/page_style.css">
     </head>
 
@@ -30,8 +32,7 @@
         <main class="main_content_page">
             <div class="page_content_container">
 
-                <p class="page_text">You can take a look at my current
-                    software publications on my 
+                <p class="page_text">You can find my software on my 
                     <a target="_blank" rel="noopener noreferrer" href="https://github.com/quietlean">Github</a> page.
                 </p>
 
