--- a/index.html
+++ b/index.html
@@ -5,7 +5,11 @@
         <meta name="viewport" content="width=device-width, inital-scale=1.0">
         <title>Quietlean</title>
 
-        <link rel="icon" href="Pictures/favicon-1.1.png" type="image/x-icon">
+        
+        <link rel="icon" href="Pictures/favicon-kreis1.png" type="image/x-icon">
+
+        <meta property="og:title" content="Quietlean">
+        <meta property="og:description" content="I wish this was the dark side of the moon.">
         
         <link rel="stylesheet" href="css/main_style.css">
         <link rel="stylesheet" href="css/reset.css">
@@ -111,9 +115,11 @@
                             <source src="Video/Clay_Web.2.mp4" type="video/mp4">
                         </video>-->
 
-                        <video autoplay muted loop id="softw_video">
+                        <!--<video autoplay muted loop id="softw_video">
                             <source src="Video/Clay_Web.2.mp4" type="video/mp4">
-                        </video>
+                        </video>-->
+
+                        <img src="Pictures/Split01.png" style="width: 60%; margin-left: 100px;">
 
                         <div class="software_text_cont">
                             <p class="sofw_text">>quietlean@celsiuscontainer</p>
