--- a/html/Absent.html
+++ b/html/Absent.html
@@ -5,6 +5,9 @@
         <meta name="viewport" content="width=device-width, inital-scale=1.0">
         <title>Absent</title>
 
+
+        <link rel="icon" href="../Pictures/favicon-kreis1.png" type="image/x-icon">
+
         <link rel="stylesheet" href="../css/page_style.css">
     </head>
 
