--- a/html/Y.KRUX.html
+++ b/html/Y.KRUX.html
@@ -5,6 +5,8 @@
         <meta name="viewport" content="width=device-width, inital-scale=1.0">
         <title>Y.KRUX</title>
 
+        <link rel="icon" href="../Pictures/favicon-kreis1.png" type="image/x-icon">
+        
         <link rel="stylesheet" href="../css/page_style.css">
     </head>
 
