--- a/html/Blog-Posts/01.html
+++ b/html/Blog-Posts/01.html
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width, inital-scale=1.0">
         <title>#01</title>
 
-        <meta property="og:title" content="02">
+        <meta property="og:title" content="#01">
         <meta property="og:description" content="Ua4hhh0h El0ctronic!">
         <link rel="icon" href="../../Pictures/favicon-kreis1.png" type="image/x-icon">
 
