--- a/html/Blog-Posts/02-kochen.html
+++ b/html/Blog-Posts/02-kochen.html
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width, inital-scale=1.0">
         <title>#02</title>
 
-        <meta property="og:title" content="02">
+        <meta property="og:title" content="#02">
         <meta property="og:description" content="What's your music in taste?">
         <link rel="icon" href="../../Pictures/favicon-kreis1.png" type="image/x-icon">
 
