neue Farben für homepage und back to blog button

--- a/html/Blog-Posts/01.html
+++ b/html/Blog-Posts/01.html
@@ -28,7 +28,11 @@
             </div>
         </div>
 
-        <div class="header_container">
+        <div class="Blog-link">
+            <a href="../Blog.html"> ‹‹ Blog-Overview</a>
+        </div>
+
+        <div class="header_container_blog">
             <h1>#01</h1>
         </div>
 
