--- a/html/Blog-Posts/02-kochen.html
+++ b/html/Blog-Posts/02-kochen.html
@@ -28,7 +28,12 @@
             </div>
         </div>
 
-        <div class="header_container">
+        <div class="Blog-link">
+            <a href="../Blog.html"> ‹‹ Blog-Overview</a>
+        </div>
+
+        <div class="header_container_blog">
+            
             <h1>#02</h1>
         </div>
 
